Alterando validação/geração do token jwt ao fazer login

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Port=3306;User=root;Password=;Database=gymaccessdb;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,11 +9,8 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "seu-connection-string-aqui"
-  },
   "Jwt": {
-    "SecretKey": "sua-chave-secreta-muito-longa-aqui-minimo-32-caracteres",
+    "SecretKey": "bf3090429e2db030c762e63c034f0206",
     "Issuer": "GymAccessAPI",
     "Audience": "GymAccessUsers"
   }
